--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "email": "email dev --dir app/emails"
   },
   "dependencies": {
+    "@calcom/embed-react": "^1.5.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-separator": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@react-email/components": "0.0.26",
     "@stripe/stripe-js": "^4.9.0",
     "@supabase/ssr": "^0.5.1",
@@ -21,6 +24,7 @@
     "@vercel/analytics": "^1.3.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^11.15.0",
     "lucide-react": "^0.453.0",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
