--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.453.0",
+    "motion": "^12.4.10",
     "next": "15.0.1",
     "next-themes": "^0.3.0",
     "openai": "^4.68.4",
